works and handles errors. todo: just figure out if interfaces need descriptive names and if classes need to move packages depending on assignment description